--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "try_words"
-version = "0.1.0"
-authors = ["Sebastian <Sebastian@Strobl.net>"]
+version = "0.6.0"
+authors = ["Sebastian TriedAngle <Sebastian@Strobl.net>"]
 edition = "2018"
 
 description = "Syllable and Word generation library written fully in Rust"
@@ -9,7 +9,6 @@ description = "Syllable and Word generation library written fully in Rust"
 [lib]
 name = "try_words"
 path = "src/lib.rs"
-
 
 [dependencies]
 csv = "1.1.3"
