--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "try_words"
+name = "rusty_word_builder"
 version = "0.6.0"
 authors = ["Sebastian TriedAngle <Sebastian@Strobl.net>"]
 edition = "2018"
