--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,16 @@
 [package]
 name = "rusty_word_builder"
 version = "0.6.0"
-authors = ["Sebastian TriedAngle <Sebastian@Strobl.net>"]
+authors = ["TriedAngle <Sebastian@Strobl.net>"]
 edition = "2018"
-
+repository = "https://github.com/TriedWorks/rusty_word_builder"
+license-file = "LICENSE"
+keywords = ["linguistics", "syllable", "words", "conlang", "language"]
+publish = true
 description = "Syllable and Word generation library written fully in Rust"
+
+[badges]
+travis-ci = { repository = "TriedWorkds/rusty_word_builder", branch= "master" }
 
 [lib]
 name = "try_words"
